# streamkeeper

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.ini.sample  config.json.sample  config.py.sample  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamkeeper.py
.github/workflows/: python-package.yml
services/: NotificationService.py  StreamDiscoveryService.py  StreamDownloadService.py
src/: config.py  streamkeeper.py
src/services/: ConversionService.py  NotificationService.py  StreamDiscoveryService.py  StreamDownloadService.py
streamkeeper/: streamkeeper.py
streamkeeper/services/: StreamDiscoveryService.py  StreamDownloadService.py
tests/: helper.py
tests/unit/: test_conversion.py  test_discovery.py  test_download.py
