[tool.isort]
line_length = 120

[tool.black]
line-length = 120
target-version = ['py27', 'py37', 'py38']
include = '\.pyi?$'

[tool.poetry]
name = "streamkeeper"
version = "2.0.1"
description = "Keep those livestreams to watch whenever you want"
authors = ["Shane Dowling"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
streamlink = "^1.7.0"
python-daemon = "^2.2.4"
python-pushover = "^0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
pre-commit = "^2.8.2"
pytest-randomly = "^3.4.1"

[tool.poetry.scripts]
streamkeeper = "streamkeeper.streamkeeper:main"